z-index Fix.

--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -1065,7 +1065,7 @@ field-name-field-ding-page-body ul
     top: 0px;
     bottom: 0px;
     position: fixed;
-    z-index: 99;
+    z-index: 999 !important;
     color: #fff;
     text-align: center;
 }
